--- a/Filtros/IIR.ipynb
+++ b/Filtros/IIR.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Vamos denominar Infinite Response Impulse Reponse (IIR) os filtros que são caracterizados pelas equações:\n",
     "$$ y(n) = \\sum_{k=0}^{N-1}b_k x(n-k) - \\sum\\limits_{k=1}^M a_k y(n-k)$$\n",
-    "$$ H(z) = \\frac{\\sum_{k=0}^{N-1}b_kz^{-k}}{1 + \\sum\\limits_{k=1}^{M}a_kz^{-k}}$$\n",
+    "$$ H(z) = \\frac{\\sum_\\limits{k=0}^{N-1}b_kz^{-k}}{1 + \\sum\\limits_{k=1}^{M}a_kz^{-k}}$$\n",
     "sendo $b_k$ e $a_k$ os coeficientes que definem o filtro. \n",
     "\n",
     "Características:\n",
@@ -25,7 +25,7 @@
    "source": [
     "### <font color='blue'> Método do cálculo pelo posicionamento de pólos e zeros </color>\n",
     "\n",
-    "O posicionamento dos pólos e zeros no plano $z$ modificam a resposta em frequência do sistema, por exemplo, um zero em determinada localização produzirá um zero na frequência correspondente, e um pólo um pico. A posição em relação ao círculo unitário também influencia na resposta. Na figura abaixo estes fatos estão representados.\n",
+    "O posicionamento dos pólos e zeros no plano $z$ modificam a resposta em frequência do sistema, por exemplo, um zero em determinada localização produzirá um nulo na frequência correspondente, e um pólo um pico. A posição em relação ao círculo unitário também influencia na resposta. Na figura abaixo estes fatos estão representados.\n",
     "\n",
     "![title](img/Fig83Ifeachor.png)\n",
     "\n",
@@ -41,7 +41,7 @@
     "\n",
     "1. Rejeição em DC e 250 Hz;\n",
     "2. Faixa de passagem centrada em 125 Hz;\n",
-    "3. Uma largura de banda de 3dB de 10 Hz;\n",
+    "3. Largura de banda de 3dB de 10 Hz;\n",
     "4. Frequência de amostragem de 500 Hz.\n",
     "\n",
     "Primeiro precisamos determinar onde colocar os pólos e os zeros:\n",
@@ -98,7 +98,6 @@
     "b = [1, 0, -1]\n",
     "a = [0, 0.877696]\n",
     "\n",
-    "\n",
     "w,H = signal.freqz(b,a) # resposta em frequência\n",
     "\n",
     "fig,ax = plt.subplots()\n",
@@ -118,17 +117,17 @@
    "source": [
     "### <font color='blue'> Método do cálculo pela invariância ao impulso </color>\n",
     "\n",
-    "Busca transformar um função do tempo contínuo $h_c(t)$ para outra no tempo discreto $$h(n) = T_dh_c(nT_d),$$ sendo $Td$ intervalo de amostragem. Na frequência $$H(e^{j\\omega}) = \\sum_{k=-\\infty}^{\\infty}H_c\\left(j\\frac{\\omega}{T_d} + j\\frac{2\\pi}{T_d}k\\right)$$\n",
+    "Busca transformar um função do tempo contínuo $h_c(t)$ para outra no tempo discreto $$h(n) = T_dh_c(nT_d),$$ sendo $T_d$ o intervalo de amostragem. Na frequência $$H(e^{j\\omega}) = \\sum_{k=-\\infty}^{\\infty}H_c\\left(j\\frac{\\omega}{T_d} + j\\frac{2\\pi}{T_d}k\\right)$$\n",
     "\n",
     "Porém no tempo contínuo \n",
     "1. $H_c(j\\Omega) = 0,\\ |\\Omega| \\geq \\pi/T_d$, e \n",
-    "2. $H(e^{j\\omega}) = H_c\\left(j\\frac{\\omega}{T_d}\\right),\\ |\\omega| \\leq \\pi,$.\n",
+    "2. $H(e^{j\\omega}) = H_c\\left(j\\frac{\\omega}{T_d}\\right),\\ |\\omega| \\leq \\pi$.\n",
     "\n",
     "Como os filtros no tempo contínuo não podem ser limitados em frequência, sempre ocorrerá aliasing, como representado abaixo.  \n",
     "\n",
     "![title](img/figOppenheim1.png)\n",
     "\n",
-    "Apesar de aliaging, ainda podem ser utilizados para filtros passa-baixas.\n",
+    "Apesar de aliasing, esse método pode ser utilizado para filtros passa-baixas.\n",
     "\n",
     "Para fazer a transformação vamos partir de $$H_c(s) = \\sum_{k=1}^{N}\\frac{A_k}{s-s_k},$$ que corresponde a $$h_c(t) = \\left\\{\\begin{array}{c c} \\sum\\limits_{k=1}^{N}A_ke^{s_kt},& t\\geq 0 \\\\ 0& t < 0 \\end{array}\\right.$$ \n",
     "\n",
@@ -169,7 +168,7 @@
     "$H_0$ é determinado fazendo $H_c(0) = 1 \\rightarrow H_0 = \\prod\\limits_{i=1}^{N} (-s_i)$, logo $H_0 = 0,12093$, e \n",
     "$$H_c(s) = \\frac{0,12093}{(s^2 + 0,3640s+0,4945)(s^2+0,9445s+0,4945)(s^2+1,3585s+0,4945)}$$\n",
     "\n",
-    "O próximo passo p eexpandir $H_c(s)$ em frações parciais e transformar para obter $H(z)$, chegando a \n",
+    "O próximo passo é expandir $H_c(s)$ em frações parciais e transformar para obter $H(z)$, chegando a \n",
     "$$H(z) = \\frac{0,2871- 0,4466z^{-1}}{1 - 1,2971z^{-1} +0,6949z^{-2}} + \\frac{-2.1428 + 1,1455z^{-1}}{1 - 1,0691z^{-1} +0,3699z^{-2}} + \\frac{1,8557 - 0,6303z^{-1}}{1 - 0,9972z^{-1} + 0,2570z^{-2}}$$"
    ]
   },
@@ -234,15 +233,17 @@
    "source": [
     "### Método da Trasnformação Bilinear\n",
     "\n",
-    "É um método não linear que se baseia na compressão de todo o eixo $j\\Omega$ de plano $s$ no círculo unitário, se sobreposição. Tem a vanteagem de evitar o aliasin e manter a magnitude da resposta em frequência do filtro analógico.\n",
+    "É um método não linear que se baseia na compressão de todo o eixo $j\\Omega$ do plano $s$ no círculo unitário, sem sobreposição. Tem a vantagem de evitar o aliasing e manter a magnitude da resposta em frequência do filtro analógico.\n",
     "\n",
-    "É realizada mapeando $s = \\frac{2}{t_d}\\left(\\frac{1-z^{-1}}{1+z^{-1}}\\right)$, ou seja \n",
-    "$$H(z) = H_c\\left[\\frac{2}{t_d}\\left(\\frac{1-z^{-1}}{1+z^{-1}}\\right)\\right]$$ que pode inverter para obter $$z = \\frac{1 + (T_d/2)s}{1 - (T_d/2)s}$$ substituindo $s = \\sigma + j\\Omega$  obtemos\n",
+    "É realizada mapeando $s = \\frac{2}{T_d}\\left(\\frac{1-z^{-1}}{1+z^{-1}}\\right)$, ou seja \n",
+    "$$H(z) = H_c\\left[\\frac{2}{T_d}\\left(\\frac{1-z^{-1}}{1+z^{-1}}\\right)\\right]$$ que pode inverter para obter $$z = \\frac{1 + (T_d/2)s}{1 - (T_d/2)s}$$ substituindo $s = \\sigma + j\\Omega$  obtemos\n",
     "$$z = \\frac{1+\\sigma T_d/2 + j\\Omega T_d/2}{1-\\sigma T_d/2 - j\\Omega T_d/2} $$\n",
     "\n",
     "Pólos no lado esquerdo do plano $s$, são mapeados em pólos dentro do círculo unitário: filtros causais estáveis são mapeados em filtros causais estáveis.\n",
     "\n",
-    "Quando $s = j\\Omega,$ $$z = \\frac{1+j\\Omega T_d/2}{1- j\\Omega T_d/2},$$ $|z| = 1$ para todo $s$ no eixo $j\\Omega,$ logo podemos escrever $$e^{j\\omega} = \\frac{1+\\sigma T_d/2 + j\\Omega T_d/2}{1-\\sigma T_d/2 - j\\Omega T_d/2},$$ e de $s = \\frac{2}{T_d}\\left(\\frac{1-z^{-1}}{1+z^{-1}}\\right)$ obtemos $$s = \\frac{2}{T_d}\\left(\\frac{1-e^{-j\\omega}}{1+ze^{-j\\omega}}\\right)$$\n",
+    "Quando $s = j\\Omega,$ $$z = \\frac{1+j\\Omega T_d/2}{1- j\\Omega T_d/2},$$ $|z| = 1$ para todo $s$ no eixo $j\\Omega,$ logo podemos escrever \n",
+    "<p>\n",
+    "$$e^{j\\omega} = \\frac{1+\\sigma T_d/2 + j\\Omega T_d/2}{1-\\sigma T_d/2 - j\\Omega T_d/2},$$ e de $s = \\frac{2}{T_d}\\left(\\frac{1-z^{-1}}{1+z^{-1}}\\right)$ obtemos $$s = \\frac{2}{T_d}\\left(\\frac{1-e^{-j\\omega}}{1+ze^{-j\\omega}}\\right)$$\n",
     "\n",
     "Fazendo $$s = \\sigma + j\\omega = \\frac{2}{T_d}\\left[\\frac{2e^{-j\\omega/2}(j\\sin(\\omega/2)}{2e^{-j\\omega/2}\\cos(\\omega/2)} \\right] = \\frac{2j}{T_d}\\tan(\\omega/2)$$\n",
     "chegamos a $$\\Omega = \\frac{2}{T_d}\\tan(\\omega_2)$$ ou $$\\omega = 2 arctg(\\Omega T_2/2)$$\n"
