--- a/Amostragem/Introducao.ipynb
+++ b/Amostragem/Introducao.ipynb
@@ -6,22 +6,20 @@
    "source": [
     "## <font color='blue'> Amostragem </font>\n",
     "\n",
-    "**Definição:** amostragem <font color='blue'> periódica </font> é o processo que produz uma representação no tempo discreto, $x(n)$, de um sinal analógico $x_c(t)$\n",
+    "**Definição:** amostragem <font color='blue'> periódica </font> é o processo que produz uma representação no tempo discreto, $x(n)$, de um sinal analógico $x_a(t)$\n",
     "$$\n",
-    "x(n) = x_c(nT), \\ \\ -\\infty < n < \\infty\n",
+    "x(n) = x_a(nT), \\ \\ -\\infty < n < \\infty\n",
     "$$\n",
     "sendo $T$ o <font color='blue'>período de amostragem </font>, e $F_s = \\frac{1}{T}$, a <font color='blue'>frequência de amostragem</font>\n",
     "\n",
-    "Conversão ideal de contínuo para discreto (C/D)\n",
-    "![title](img/fig41Oppenheim2aEdicao.png)\n",
+    "A conversão é de um sinal no tempo contínuo para um sinal no tempo discreto. Que Conversão ideal de contínuo para discreto (C/D), que nesse momento pode ser visualizada como uma chave que fecha e abre a cada $T$ instantes de tempo, conforme representado na Figura abaixo.\n",
     "\n",
-    "Um conversor Analógico para Digital necessita de outros blocos;\n",
+    "![title](img/ConvContinuoDiscreto.png)\n",
     "\n",
-    "Uma representação do conversor analógico para discreto\n",
-    "![title](img/fig42aOppenheim2aEdicao.png)\n",
+    "Saliente-se que a conversão realizada até esse momento é de contínuo para discreto, pois um conversor Analógico para Digital necessita de outros blocos.\n",
     "\n",
-    "![title](img/fig42bOppenheim2aEdicao.png)\n",
-    "\n",
+    "Uma representação do conversor analógico para discreto pode ser feita consdeirando a multiplicação sinal analógico $x_a(t)$ por um trem de impulsos periódicos com período $T$:\n",
+    "![title](img/ConversaoTremimpulsoSeqDiscreta.png)\n",
     "\n",
     "\n",
     "Matematicamente\n",
@@ -30,10 +28,10 @@
     "$$\n",
     "e\n",
     "$$\n",
-    "x_s(t) = x_c(t)s(t) = x_c(t) \\sum_{n=-\\infty}^{ \\infty}\\delta(t - nT)\n",
+    "x_s(t) = x_a(t)s(t) = x_a(t) \\sum_{n=-\\infty}^{ \\infty}\\delta(t - nT)\n",
     "$$\n",
     "$$\n",
-    "x_s(t) = \\sum_{n=-\\infty}^{ \\infty}x_c(nT)\\delta(t - nT)\n",
+    "x_s(t) = \\sum_{n=-\\infty}^{ \\infty}x_a(nT)\\delta(t - nT)\n",
     "$$\n",
     "\n",
     "Transformada de Fourier de uma sequência periódica de impulsos, $s(t)$\n",
@@ -42,10 +40,10 @@
     "$$\n",
     "sendo $\\Omega_s = 2\\pi/T$, então como $X_s(j\\Omega) = \\frac{1}{2\\pi}X_c(j\\Omega)*S(j\\Omega)$, temos\n",
     "$$\n",
-    "X_s(j\\Omega) = \\frac{1}{T} \\sum_{k=-\\infty}^{ \\infty}X_c[j(\\Omega - k\\Omega_s)]\n",
+    "X_s(j\\Omega) = \\frac{1}{T} \\sum_{k=-\\infty}^{ \\infty}X_a[j(\\Omega - k\\Omega_s)]\n",
     "$$\n",
     "\n",
-    "![title](img/fig43aOppenheim2aEdicao.png)\n",
+    "![title](img/EspectroAnalogicoeTremdeImpulsos.png)\n",
     "\n",
     "\n",
     "Para facilitar nossas análises, vamos considerar que $x_c(t)$ é um sinal limitado em banda, ou seja, $X_c(j\\Omega) = 0$, para $|\\Omega| > \\Omega_N$.\n",
@@ -64,14 +62,14 @@
     "![title](img/fig44cdeOppenheim2aEdicao.png)\n",
     "\n",
     "\n",
-    "***Teorema de Nyquist:*** Um sinal $x_c(t)$  limitado em banda, com $X_c(j\\Omega) = 0$ para $|\\Omega| \\geq \\Omega_N$, pode ser univocamente recuperado de suas amostras $x(n)$ tomadas a uma taxa de\n",
+    "***Teorema de Nyquist:*** Um sinal $x_c(t)$  limitado em banda, com $X_a(j\\Omega) = 0$ para $|\\Omega| \\geq \\Omega_N$, pode ser univocamente recuperado de suas amostras $x(n)$ tomadas a uma taxa de\n",
     "$$\n",
     "\\Omega_s \\geq 2\\Omega_N\n",
     "$$\n",
     "Observação: Esse teorema também é atribuído a Shannon e Kotelnikov.\n",
     "\n",
     "\n",
-    "<font color='green'>Exercício:</font> Seja $x_c(t) = \\cos(\\Omega_0 t)$, esboce o espectro de $x_s(t)$ obtido amostrando $x_c(t)$ para $\\Omega_s > 2\\Omega_0$ e $\\Omega_s < 2 \\Omega_0$.\n",
+    "<font color='green'>Exercício:</font> Seja $x_a(t) = \\cos(\\Omega_0 t)$, esboce o espectro de $x_s(t)$ obtido amostrando $x_a(t)$ para $\\Omega_s > 2\\Omega_0$ e $\\Omega_s < 2 \\Omega_0$.\n",
     "\n",
     "***Espectro Analógico x Discreto:*** Lembremos que o sinal amostrado é dado por \n",
     "$x_s(t) = \\sum\\limits_{n=-\\infty}^{\\infty}x_c(nT_s)\\delta(t - nT_s)$ e aplicando Fourier\n",
@@ -273,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
