--- a/Amostragem/Introducao.ipynb
+++ b/Amostragem/Introducao.ipynb
@@ -46,15 +46,15 @@
     "![title](img/EspectroAnalogicoeTremdeImpulsos.png)\n",
     "\n",
     "\n",
-    "Para facilitar nossas análises, vamos considerar que $x_c(t)$ é um sinal limitado em banda, ou seja, $X_c(j\\Omega) = 0$, para $|\\Omega| > \\Omega_N$.\n",
+    "Para facilitar nossas análises, vamos considerar que $x_c(t)$ é um sinal limitado em banda, ou seja, $X_c(j\\Omega) = 0$, para $|\\Omega| > \\Omega_a$.\n",
     "\n",
     "\n",
-    "***Relação entre $\\Omega_s$ e $\\Omega_N$***\n",
+    "***Relação entre $\\Omega_s$ e $\\Omega_a$***\n",
     "\n",
-    "1. $\\Omega_s > \\Omega_N$\n",
-    "![title](img/fig43bOppenheim2aEdicao.png)\n",
-    "2. $\\Omega_s < \\Omega_N$\n",
-    "![title](img/fig43dOppenheim2aEdicao.png)\n",
+    "1. $\\Omega_s > \\Omega_a$\n",
+    "![title](img/EspectrosemAliasing.png)\n",
+    "2. $\\Omega_s < \\Omega_a$\n",
+    "![title](img/EspectrocomAliasing.png)\n",
     "***Aliasing***\n",
     "\n",
     "***Recuperação***\n",
@@ -62,9 +62,9 @@
     "![title](img/fig44cdeOppenheim2aEdicao.png)\n",
     "\n",
     "\n",
-    "***Teorema de Nyquist:*** Um sinal $x_c(t)$  limitado em banda, com $X_a(j\\Omega) = 0$ para $|\\Omega| \\geq \\Omega_N$, pode ser univocamente recuperado de suas amostras $x(n)$ tomadas a uma taxa de\n",
+    "***Teorema de Nyquist:*** Um sinal $x_c(t)$  limitado em banda, com $X_a(j\\Omega) = 0$ para $|\\Omega| \\geq \\Omega_a$, pode ser univocamente recuperado de suas amostras $x(n)$ tomadas a uma taxa de\n",
     "$$\n",
-    "\\Omega_s \\geq 2\\Omega_N\n",
+    "\\Omega_s \\geq 2\\Omega_a\n",
     "$$\n",
     "Observação: Esse teorema também é atribuído a Shannon e Kotelnikov.\n",
     "\n",
