--- a/Amostragem/Introducao.ipynb
+++ b/Amostragem/Introducao.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "***Recuperação***\n",
     "\n",
-    "![title](img/fig44cdeOppenheim2aEdicao.png)\n",
+    "![RecuperacaoEpsectro](img/RecuperacaoEspectro.png)\n",
     "\n",
     "\n",
     "***Teorema de Nyquist:*** Um sinal $x_c(t)$  limitado em banda, com $X_a(j\\Omega) = 0$ para $|\\Omega| \\geq \\Omega_a$, pode ser univocamente recuperado de suas amostras $x(n)$ tomadas a uma taxa de\n",
@@ -118,7 +118,7 @@
     "\n",
     "2. $\\omega = 2\\pi$ então $\\pi = \\Omega T$ que corresponde a $f = F_s$, e\n",
     "\n",
-    "3. Se $F_B$ for a maior frequência do sinal $\\omega_B = 2\\pi F_B T_s = \\frac{2\\pi F_B}{F}$ e como $F_s > 2F_B$, $\\omega_B < \\pi$.\n",
+    "3. Se $F_B$ for a maior frequência do sinal $\\omega_B = 2\\pi F_B T_s = \\frac{2\\pi F_B}{F_s}$ e como $F_s > 2F_B$, $\\omega_B < \\pi$.\n",
     "\n",
     "A componente do sinal analógico que for mapeada em $\\Omega_s - \\Omega_B$ em $X_s(j\\Omega)$ será mapeada em $\\omega = 2\\pi - \\frac{2\\pi F_B}{F_s}$ que terá valor $\\pi < \\omega < 2\\pi$.\n",
     "\n",
@@ -135,26 +135,24 @@
     "$$\n",
     "x_s(t) = \\sum_{n=-\\infty}^{\\infty}x(n)\\delta(t - nT_s)\n",
     "$$\n",
-    "sendo $T$ o período de amostragem, e $x(n)$ o valor da amostra em $t = nT$.\n",
+    "sendo $T_s$ o período de amostragem, e $x(n)$ o valor da amostra em $t = nT_s$.\n",
     "\n",
     "Para reconstruir o sinal analógico a partir das amostras, podemos utilizar um filtro passa-baixas ideal $H_r(j\\Omega)$, e obter na sua saída\n",
     "$$\n",
     "x_r(t) = \\sum_{n=-\\infty}^{\\infty}x(n)h_r(t - nT_s)\n",
     "$$\n",
-    "sendo $h_r(t)$ a resposta ao impulso do filtro.\n",
-    "\n",
-    "Sendo $h_r(t)$ é um filtro passa baixas ideal, o módulo de sua resposta em frequência temo o formato\n",
+    "sendo $h_r(t)$ a resposta ao impulso do filtro passa baixas ideal, cujo módulo de resposta em frequência tem o formato\n",
     "![title](img/FPB.png)\n",
-    "cuja transformada inversa é\n",
+    "com transformada inversa\n",
     "$$\n",
-    "h_r(t) = \\frac{\\sin(\\pi t/T)}{\\pi t/T}\n",
+    "h_r(t) = \\frac{\\sin(\\pi t/T_s)}{\\pi t/T_s}\n",
     "$$\n",
     "![title](img/fig48cOppenheim2aEdicao.png)\n",
     "\n",
     "\n",
     "A reconstrução ser dada por\n",
     "$$\n",
-    "x_r(t) = \\sum_{n=-\\infty}^{\\infty}x(n)h_r(t - nT) = \\sum_{n=-\\infty}^{\\infty}x[n]\\frac{\\sin[\\pi(t -nT)/T]}{\\pi(t - nT)/T},\\ \\ logo\n",
+    "x_r(t) = \\sum_{n=-\\infty}^{\\infty}x(n)h_r(t - nT_s) = \\sum_{n=-\\infty}^{\\infty}x[n]\\frac{\\sin[\\pi(t -nT_s)/T_s]}{\\pi(t - nT_s)/T_s},\\ \\ logo\n",
     "$$\n",
     "![title](img/fig49abcOppenheim2aEdicao.png)"
    ]
