--- a/DFT/Transformada Discreta de Fourier.ipynb
+++ b/DFT/Transformada Discreta de Fourier.ipynb
@@ -11,6 +11,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Lembrando que se $x(n)$ é  um sinal no tempo de discreto e aperiódico, sua Transformada de Fourier é dada por\n",
+    "$$\n",
+    "X(e^{j\\omega}) = \\sum_{n=-\\infty}^{\\infty}x[n]e^{-j\\omega n}\n",
+    "$$\n",
+    "e a  inversa \n",
+    "$$\n",
+    "x(n) = \\frac{1}{2\\pi}\\int_{2\\pi}X(e^{j\\omega})e^{j\\omega n}d\\omega\n",
+    "$$\n",
+    "$X(e^{j\\omega})$ é uma função contínua de $\\omega$.\n",
+    "\n",
+    "**Exemplo:** Seja o sinal\n",
+    "$$\n",
+    "x(n) = \\left\\{ \n",
+    "\\begin{array}{c c}\n",
+    "1, & 0 \\leq n < L \\\\ 0, & c.c.\n",
+    "\\end{array}\n",
+    "\\right.\n",
+    "$$\n",
+    "- Ou seja, um sinal limitado no tempo com apenas $L$ valores não nulos.\n",
+    "- Calculando a Transformada de Fourier para $L=8$ obtemos\n",
+    "$$\n",
+    "X(e^{j\\omega}) = \\frac{e^{-j8\\omega} - 1}{e^{-j\\omega} - 1}\n",
+    "$$\n",
+    "cujo módulo está representado na Figura abaixo\n",
+    "\n",
+    "![ModuloEspetroPortaDiscreta](Figuras/ModuloEspetroPortaDiscreta.png)\n",
+    "\n",
+    "\n",
+    "Que é uma função contínua de $\\omega$, e para realizar a análise espectral usando um processador digital, devemos amostrá-la.\n",
+    "\n",
+    "Por exemplo, se escolhermos $N = 8$, tomas nas frequências $\\omega_k = 2\\pi k/N$ amostras, obteremos a representação\n",
+    "\n",
+    "![ModuloEspetroPortaDiscreta_SampledN8](Figuras/ModuloEspetroPortaDiscreta_SampledN8.png)\n",
+    "\n",
+    "A sequência de $N$ valores é a DFT do sinal.\n",
+    "\n",
+    "Mapeamento do sinal no tempo discreto para o espectro discreto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Então\n",
+    "$$\n",
+    "X[k] = X(e^{j\\omega})|_{\\omega=\\frac{2\\pi k}{N}},\\ k=0,1,2,..., N-1\n",
+    "$$\n",
+    "- Como $X(e^{j\\omega})$ é periódica, basta amostrar um período de $2\\pi$.\n",
+    "- $x(n)$  tem comprimento $L$ ($x[n] = 0$ para $n < 0 $ e $N\\geq L$) temos\n",
+    "$$\n",
+    "X[k] = X(e^{j\\frac{2\\pi k}{N}}) = \\sum\\limits_{n=0}^{L-1}x[n]e^{-j\\frac{2\\pi k}{N}n}\n",
+    "$$\n",
+    "ou ainda como\n",
+    "$$\n",
+    "X[k] =\\left\\{ \\begin{array}{c c} \\sum\\limits_{n=0}^{N-1}x[n]W_N^{kn} & k = 0,1, ..., N-1 \\\\\n",
+    "0, & c.c\n",
+    "\\end{array}\n",
+    "\\right.\n",
+    "$$\n",
+    "e\n",
+    "$$\n",
+    "x[n] = \\left\\{ \\begin{array}{c c} \\frac{1}{N}\\sum\\limits_{k=0}^{N-1}X[k]W_{N}^{-kn}, & n = 0,1,...,N-1 \\\\ 0, & c.c.  \\end{array}\\right.\n",
+    "$$\n",
+    "sendo $W_N = e^{-j\\frac{2\\pi}{N}}$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Observe que na equação inversa $n = 0, ..., N-1$, e que os demais valores de $x(n)$ devem ser zero.\n",
+    "<p>\n",
+    "- Entretanto na inversa aparece $W_N$ que é uma função periódica com período $N$, logo a sequência recuperada no tempo discreta será periódica com período $N$, por isso é necessário limitá-la nos primeiros $N$ pontos.\n",
+    "    <p>\n",
+    "- Outro fator a se destacar é que originalmente o sinal $x(n)$ tem $L$ valores e na definição de $X(k)$ foi utilizada a variável $N$ que pode ser diferente de $L$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- O parâmetro $N$ é o passo que a função $H(e^{j\\omega})$ será amostrada, ou seja, como o intervalo $2\\pi$ será dividida ($2\\pi/N$);\n",
+    "<p>\n",
+    "-Ao aplicar a transformada inversa em $X(k)$ se obtém um sinal $\\hat{x}(n)$ que é periódico cujos valores se repetem a cada $N$;\n",
+    "<p>\n",
+    "-Dessa forma, ao fazer $N>L$, o que implica em tomar além dos $L$ primeiros valores de $x(n)$ outros $N-L$ valores que são zero na equação\n",
+    "$$\n",
+    "X[k] = X(e^{j\\frac{2\\pi k}{N}}) = \\sum\\limits_{n=0}^{L-1}x[n]e^{-j\\frac{2\\pi k}{N}n}\n",
+    "$$\n",
+    "melhorará a representação espectral, pois os intervalos $2\\pi/N$ serão menores e assim mais detalhes serão tomados, além do que no tempo as cópias de $x(n)$ em $\\hat{x}(n)$ estarão mais espaçadas.\n",
+    "<p>\n",
+    "- O fato de utilizar valores $x(n) = 0$, $L \\leq n \\leq N-1$ no somatório da Equação acima não contribuirá com novos valores, porém fará com que os valores não nulos quando $0 \\leq n \\leq < L-1$ seja ponderados por exponenciais $e^{-j\\frac{2\\pi}{N}}$ menos a medida que $N$ aumenta, modificando assim o valor final de $X(k)$.\n",
+    "<p>\n",
+    "- Assim aumentar o valor de $N$ não traz problema para a representação espectral de $x(n)$, porém implica em mais processamento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exemplo:** Voltemos ao sinal\n",
+    "$$\n",
+    "x[n] =  \\left\\{ \\begin{array}{c c} 1, & n = 0,1,...,8 \\\\ 0, & c.c.  \\end{array}\\right.\n",
+    "$$\n",
+    "tem-se\n",
+    "$$\n",
+    "X[k] = \\sum_{n=0}^{7}e^{-j(\\frac{2\\pi k}{8})n} = \\frac{ e^{-j2\\pi k} - 1}{ e^{-j(2\\pi k/8)}-1}\n",
+    "=\\left\\{\\begin{array}{c c}8, & k = 0, \\pm8, \\pm 16, ... \\\\ 0, c.c\\end{array}\\right.\n",
+    "$$\n",
+    "\n",
+    "![ModuloEspetroPortaDiscreta_SampledN8valores](Figuras/ModuloEspetroPortaDiscreta_SampledN8valores.png)\n",
+    "\n",
+    "- Observe que vários valores não foram registrados.\n",
+    "- Fazendo $N = 16$: $X[k] = \\sum_{n=0}^{15}e^{-j(\\frac{2\\pi 8k}{16})n} = \\frac{e^{-j2\\pi k} -1}{e^{-j(2\\pi k/16)-1}}\n",
+    "$\n",
+    "\n",
+    "![ModuloEspetroPortaDiscreta_SampledN16valores](Figuras/ModuloEspetroPortaDiscreta_SampledN16valores.png)\n",
+    "\n",
+    "O que acontece se aumentarmos para $N = 32, 64, 128$ ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Na frequência\n",
+    "\n",
+    "- Vamos observar o caminho inverso, dado um $X(k)$ qual $x(n)$ é obtido pela transformada inversa?\n",
+    "- Tomemos $X(k)$ para sinal retangular dos exemplos anteriores com $L=8$ e $N=8$.\n",
+    "- Aplicando a transformada inversa obtemos\n",
+    "$$\n",
+    "\\hat{x}(n) = \\frac{1}{8}\\sum_{k=0}^{7}X(k)e^{j\\frac{2\\pi}{N}kn} = \\frac{1}{8}.8 = 1.\n",
+    "$$\n",
+    "\\item O sinal recuperado $\\hat{x}(n)$ é periódico. Porém como $x(n) = \\hat{x}(n)$, $0 \\leq n < L$ obtem-se o sinal original.\n",
+    "\\item Fazendo o mesmo para $N=16$ chega-se a\n",
+    "$$\n",
+    "\\hat{x}(n) = \\frac{1}{16}\\sum_{k=0}^{15}X(k)e^{j\\frac{2\\pi}{16}kn} \n",
+    "$$\n",
+    "cujo sinal está representado na Figura abaixo.\n",
+    "\n",
+    "![SinalPortaRecuperadoTransformadaDiscretaN16](Figuras/SinalPortaRecuperadoTransformadaDiscretaN16.png)\n",
+    "\n",
+    "- Que também é periódico, agora com período $N=16$, do qual se obtém $x(n)$ ao tomar os $L=8$ primeiros valores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Representação matricial\n",
+    "\n",
     "Vamos iniciar relembrando que a Transformada Discreta de Fourier (DFT) é uma representação **discreta** do espectro de frequências de sinais no tempo discreto $x(n)$, cuja expressão é dada por:"
    ]
   },
@@ -530,7 +681,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -544,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
