--- a/Filtros/FIR.ipynb
+++ b/Filtros/FIR.ipynb
@@ -152,6 +152,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Obs.: Ir para o texto Aula1-Filtros(AnaliseSistemas) antes de continuar.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <font color='blue'> Projeto de Filtros FIR por Amostragem em Frequência </color>\n"
    ]
   },
