--- a/Aula_1.ipynb
+++ b/Aula_1.ipynb
@@ -24,7 +24,7 @@
     "- Discrete-Time Signal Processing: Oppenheim. (Disponível na Biblioteca online)\n",
     "- Notas de aula no github (https://github.com/ecandeia/PDS).\n",
     "- Understandign Digital Signal Processing, Richard L. Lyons. Prentice Hall.\n",
-    "- Digital Singal Porcessing. João M. Carvalho, Edmar C. Gurjão, Luciana R. Veloso e Carlos D. M. Regis. Momentum Press.\n",
+    "- Digital Singal Processing. João M. Carvalho, Edmar C. Gurjão, Luciana R. Veloso e Carlos D. M. Regis. Momentum Press.\n",
     "- Blog DSP Related: https://www.dsprelated.com/blogs-1/nf/Rick_Lyons.php\n",
     "- Demonstrações no gihub (https://github.com/ecandeia/PDS)\n",
     "\n",
@@ -42,7 +42,7 @@
     "- Tempo contínuo: $$X(j\\Omega) = \\int_{-\\infty}^{\\infty}x(t)e^j{\\Omega t}dt$$\n",
     "- Tempo discreto: $$X(e^{j\\omega}) = \\sum_{n=-\\infty}^{\\infty}x(n)e^{-j\\omega n}$$\n",
     "\n",
-    "$X(e^{j\\omega})$ é uma função peródica com período $2\\pi$.\n",
+    "$X(e^{j\\omega})$ é uma função periódica com período $2\\pi$.\n",
     "\n",
     "Exemplo: Seja $x(n) = \\frac{1}{3}\\delta(n-1) + \\frac{1}{3}\\delta(n) + \\frac{1}{3}\\delta(n+1)$. Calcula e esboce $X(e^{j\\omega}$)."
    ]
