--- a/Aula_1.ipynb
+++ b/Aula_1.ipynb
@@ -24,7 +24,7 @@
     "- Discrete-Time Signal Processing: Oppenheim. (Disponível na Biblioteca online)\n",
     "- Notas de aula no github (https://github.com/ecandeia/PDS).\n",
     "- Understandign Digital Signal Processing, Richard L. Lyons. Prentice Hall.\n",
-    "- Digital Singal Processing. João M. Carvalho, Edmar C. Gurjão, Luciana R. Veloso e Carlos D. M. Regis. Momentum Press.\n",
+    "- Digital Signal Processing. João M. Carvalho, Edmar C. Gurjão, Luciana R. Veloso e Carlos D. M. Regis. Momentum Press.\n",
     "- Blog DSP Related: https://www.dsprelated.com/blogs-1/nf/Rick_Lyons.php\n",
     "- Demonstrações no gihub (https://github.com/ecandeia/PDS)\n",
     "\n",
