--- a/Convolucao/ConcolucoesCircularLinear.ipynb
+++ b/Convolucao/ConcolucoesCircularLinear.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "## Identificação de Sistemas\n",
     "\n",
-    "Seja a sistuação em que aplicamos um sinal de $x(n)$, observamos a saída $y(n)$ mas não conhecemos a resposta ao impulso $h(n)$. Neste caso, se lambramos que\n",
+    "Seja a situação em que aplicamos um sinal de $x(n)$, observamos a saída $y(n)$ mas não conhecemos a resposta ao impulso $h(n)$. Neste caso, se lambramos que\n",
     "$$y(n) = h(0)x(n) + h(1)x(n-1) + ....$$\n",
     "quando $n=0$ temos que \n",
     "$$h(0) = \\frac{y(0)}{x(0)}.$$\n",
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
