--- a/Amostragem/Introducao.ipynb
+++ b/Amostragem/Introducao.ipynb
@@ -12,7 +12,7 @@
     "$$\n",
     "sendo $T_s$ o <font color='blue'>período de amostragem </font>, e $F_s = \\frac{1}{T_s}$, a <font color='blue'>frequência de amostragem</font>\n",
     "\n",
-    "A conversão é de um sinal no tempo contínuo para um sinal no tempo discreto (C/D), que nesse momento pode ser visualizada como uma chave que fecha e abre a cada $T_s$ instantes de tempo, conforme representado na Figura abaixo.\n",
+    "A conversão é de um sinal no tempo contínuo para um sinal no tempo discreto (C/D), que nesse momento pode ser visualizada como a ação de uma chave que fecha e abre a cada $T_s$ instantes de tempo, conforme representado na Figura abaixo.\n",
     "\n",
     "![title](img/ConvContinuoDiscreto.png)\n",
     "\n",
@@ -34,7 +34,7 @@
     "x_s(t) = \\sum_{n=-\\infty}^{ \\infty}x_a(nT_s)\\delta(t - nT_s)\n",
     "$$\n",
     "\n",
-    "Transformada de Fourier de uma sequência periódica de impulsos, $s(t)$\n",
+    "Lembrando que a transformada de Fourier de uma sequência periódica de impulsos, $s(t)$\n",
     "$$\n",
     "S(j\\Omega) = \\frac{2\\pi}{T_s}\\sum_{k=-\\infty}^{ \\infty}\\delta(\\Omega - k\\Omega_s)\n",
     "$$\n",
@@ -59,7 +59,7 @@
     "\n",
     "1. $\\Omega_s > \\Omega_a$: neste caso não há sobreposição das cópias do espectro de $X_a(j\\Omega)$\n",
     "![title](img/EspectrosemAliasing.png)\n",
-    "2. $\\Omega_s < \\Omega_a$: ocorre a sbreposição das cópias do espectro, fenômeno denominado de **alisiang**\n",
+    "2. $\\Omega_s < \\Omega_a$: ocorre a sbreposição das cópias do espectro, fenômeno denominado de **aliasing**\n",
     "![title](img/EspectrocomAliasing.png)"
    ]
   },
@@ -72,7 +72,7 @@
     "Dado que temos um sinal amostrado, $x_s(t)$ com espectro de frequência $X_s(j\\Omega)$, podemos recuperar o sinal analógico aplicando um filtro passa-baixas, conforme ilustrado abaixo:\n",
     "![RecuperacaoEpsectro](img/RecuperacaoEspectro.png)\n",
     "\n",
-    "Observe que na Figrua acima, considerou-se que a frequência de amostragem foi tal que não houve sobreposição do espectro (sem aliasing), observando a figura acima temos que\n",
+    "Observe que na Figura acima considerou-se que a frequência de amostragem foi tal que não houve sobreposição do espectro (sem aliasing), observando a figura acima temos que\n",
     "$$\n",
     "\\Omega_s - \\Omega_a > \\Omega_a \\rightarrow \\Omega_s > 2\\Omega_a\n",
     "$$\n",
@@ -417,11 +417,12 @@
    "source": [
     "***Filtragem anti-aliasing***\n",
     "\n",
-    "Sinal de entrada não seja limitado em banda, ou taxa de Nyquist necessária é muito alta;\n",
+    "Caso o sinal de entrada não seja limitado em banda  a taxa de Nyquist necessária é muito alta. Uma forma de reduzir esse problema é filtrar o sinal antes de amostrar.\n",
     "\n",
-    "Filtrar o sinal;\n",
+    "Por exemplo, considere um sinal de voz, que a priori contém frequências na faixa audível (20Hz a 20 kHz), se aplicarmos um filtro em 4 kHz o sinal resultante ainda é intelgiível e permite a identificação da pessoa que produziu a fala. Essa filtragem permite que seja usado um conversor analógico de 8 kHz por exemplo.\n",
     "\n",
-    "Ex.: Sinal de voz, sinal da rede elétrica;\n",
+    "O filtro usado antes da amostragem é conhecido como filtro anti-aliasing.\n",
+    "\n",
     "\n",
     "Filtro passa baixas:\n",
     "$$\n",
