--- a/Filtros/IIR.ipynb
+++ b/Filtros/IIR.ipynb
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Método da Trasnformação Bilinear\n",
+    "### Método da Transformação Bilinear\n",
     "\n",
     "É um método não linear que se baseia na compressão de todo o eixo $j\\Omega$ do plano $s$ no círculo unitário, sem sobreposição. Tem a vantagem de evitar o aliasing e manter a magnitude da resposta em frequência do filtro analógico.\n",
     "\n",
