--- a/DFT/Transformada Discreta de Fourier.ipynb
+++ b/DFT/Transformada Discreta de Fourier.ipynb
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Antes de avançar, vamos observar o comportamento da quantidade $W_N = e^{-\\frac{2\\pi}{N}}$, quem tem\n",
+    "Antes de avançar, vamos observar o comportamento da quantidade $W_N = e^{-j\\frac{2\\pi}{N}}$, quem tem\n",
     "1. $|W_N| = 1,\\ \\forall\\ N$,\n",
     "2. $\\angle W_N = atan\\left(\\frac{2\\pi}{N}\\right)$.\n",
     "\n",
